Bug: 42608 - ZCS toast is arbitrarily wide Revert max-width for tooltip until we figure out something better. The text for appt tooltips was overflowing.
http://bugzilla.zimbra.com/show_bug.cgi?id=42608

Copied from Perforce
 Change: 218731

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -121,7 +121,6 @@
 /* Body container (div) for the tooltip. */
 .DwtToolTipBody {
 	padding:2px;
-	max-width:400px;
 }
 
 /* Containers (divs) for the top and bottom pointers of the tooltips.
